--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 *.out linguist-detectable=False
 *.in linguist-detectable=False
 *.md linguist-detectable=False
+*.3 linguist-detectable=False
+*.4 linguist-detectable=False
+*.5 linguist-detectable=False
