--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,4 @@
 *.3 linguist-documentation
 *.4 linguist-documentation
 *.5 linguist-documentation
-**/suites/* linguist-documentation
+*/suites/* linguist-documentation
